build/log/idf_py_stdout_output_122872
[1/17] Linking C static library esp-idf/json/libjson.a
[2/17] Linking C static library esp-idf/spiffs/libspiffs.a
[3/17] Linking C static library esp-idf/fatfs/libfatfs.a
[4/17] Linking C static library esp-idf/mqtt/libmqtt.a
[5/17] Linking C static library esp-idf/protobuf-c/libprotobuf-c.a
[6/17] Performing build step for 'bootloader'
[1/1] cd /home/dungnt98/esp32-conveyor/build/bootloader/esp-idf/esptool_py && /home/dungnt98/.espressif/python_env/idf5.0_py3.8_env/bin/python /home/dungnt98/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/dungnt98/esp32-conveyor/build/bootloader/bootloader.bin
Bootloader binary size 0x6710 bytes. 0x8f0 bytes (8%) free.
[7/15] Linking C static library esp-idf/protocomm/libprotocomm.a
[8/15] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/encoder.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/encoder.c.obj 
/home/dungnt98/.espressif/tools/xtensa-esp32-elf/esp-2022r1-11.2.0/xtensa-esp32-elf/bin/xtensa-esp32-elf-gcc -DMBEDTLS_CONFIG_FILE=\"mbedtls/esp_config.h\" -DUNITY_INCLUDE_CONFIG_H -Iconfig -I../main -I/home/dungnt98/esp/esp-idf/components/newlib/platform_include -I/home/dungnt98/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/dungnt98/esp/esp-idf/components/freertos/esp_additions/include/freertos -I/home/dungnt98/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/dungnt98/esp/esp-idf/components/freertos/esp_additions/include -I/home/dungnt98/esp/esp-idf/components/esp_hw_support/include -I/home/dungnt98/esp/esp-idf/components/esp_hw_support/include/soc -I/home/dungnt98/esp/esp-idf/components/esp_hw_support/include/soc/esp32 -I/home/dungnt98/esp/esp-idf/components/esp_hw_support/port/esp32/. -I/home/dungnt98/esp/esp-idf/components/esp_hw_support/port/esp32/private_include -I/home/dungnt98/esp/esp-idf/components/heap/include -I/home/dungnt98/esp/esp-idf/components/log/include -I/home/dungnt98/esp/esp-idf/components/soc/include -I/home/dungnt98/esp/esp-idf/components/soc/esp32/. -I/home/dungnt98/esp/esp-idf/components/soc/esp32/include -I/home/dungnt98/esp/esp-idf/components/hal/esp32/include -I/home/dungnt98/esp/esp-idf/components/hal/include -I/home/dungnt98/esp/esp-idf/components/hal/platform_port/include -I/home/dungnt98/esp/esp-idf/components/esp_rom/include -I/home/dungnt98/esp/esp-idf/components/esp_rom/include/esp32 -I/home/dungnt98/esp/esp-idf/components/esp_rom/esp32 -I/home/dungnt98/esp/esp-idf/components/esp_common/include -I/home/dungnt98/esp/esp-idf/components/esp_system/include -I/home/dungnt98/esp/esp-idf/components/esp_system/port/soc -I/home/dungnt98/esp/esp-idf/components/esp_system/port/include/private -I/home/dungnt98/esp/esp-idf/components/xtensa/include -I/home/dungnt98/esp/esp-idf/components/xtensa/esp32/include -I/home/dungnt98/esp/esp-idf/components/lwip/include -I/home/dungnt98/esp/esp-idf/components/lwip/include/apps -I/home/dungnt98/esp/esp-idf/components/lwip/include/apps/sntp -I/home/dungnt98/esp/esp-idf/components/lwip/lwip/src/include -I/home/dungnt98/esp/esp-idf/components/lwip/port/esp32/include -I/home/dungnt98/esp/esp-idf/components/lwip/port/esp32/include/arch -I/home/dungnt98/esp/esp-idf/components/esp_ringbuf/include -I/home/dungnt98/esp/esp-idf/components/efuse/include -I/home/dungnt98/esp/esp-idf/components/efuse/esp32/include -I/home/dungnt98/esp/esp-idf/components/driver/include -I/home/dungnt98/esp/esp-idf/components/driver/deprecated -I/home/dungnt98/esp/esp-idf/components/driver/esp32/include -I/home/dungnt98/esp/esp-idf/components/esp_pm/include -I/home/dungnt98/esp/esp-idf/components/mbedtls/port/include -I/home/dungnt98/esp/esp-idf/components/mbedtls/mbedtls/include -I/home/dungnt98/esp/esp-idf/components/mbedtls/mbedtls/library -I/home/dungnt98/esp/esp-idf/components/mbedtls/esp_crt_bundle/include -I/home/dungnt98/esp/esp-idf/components/esp_app_format/include -I/home/dungnt98/esp/esp-idf/components/bootloader_support/include -I/home/dungnt98/esp/esp-idf/components/bootloader_support/bootloader_flash/include -I/home/dungnt98/esp/esp-idf/components/esp_partition/include -I/home/dungnt98/esp/esp-idf/components/app_update/include -I/home/dungnt98/esp/esp-idf/components/spi_flash/include -I/home/dungnt98/esp/esp-idf/components/pthread/include -I/home/dungnt98/esp/esp-idf/components/esp_timer/include -I/home/dungnt98/esp/esp-idf/components/app_trace/include -I/home/dungnt98/esp/esp-idf/components/esp_event/include -I/home/dungnt98/esp/esp-idf/components/nvs_flash/include -I/home/dungnt98/esp/esp-idf/components/esp_phy/include -I/home/dungnt98/esp/esp-idf/components/esp_phy/esp32/include -I/home/dungnt98/esp/esp-idf/components/vfs/include -I/home/dungnt98/esp/esp-idf/components/esp_netif/include -I/home/dungnt98/esp/esp-idf/components/wpa_supplicant/include -I/home/dungnt98/esp/esp-idf/components/wpa_supplicant/port/include -I/home/dungnt98/esp/esp-idf/components/wpa_supplicant/esp_supplicant/include -I/home/dungnt98/esp/esp-idf/components/esp_wifi/include -I/home/dungnt98/esp/esp-idf/components/unity/include -I/home/dungnt98/esp/esp-idf/components/unity/unity/src -I/home/dungnt98/esp/esp-idf/components/cmock/CMock/src -I/home/dungnt98/esp/esp-idf/components/console -I/home/dungnt98/esp/esp-idf/components/http_parser -I/home/dungnt98/esp/esp-idf/components/esp-tls -I/home/dungnt98/esp/esp-idf/components/esp-tls/esp-tls-crypto -I/home/dungnt98/esp/esp-idf/components/esp_adc/include -I/home/dungnt98/esp/esp-idf/components/esp_adc/interface -I/home/dungnt98/esp/esp-idf/components/esp_adc/esp32/include -I/home/dungnt98/esp/esp-idf/components/esp_adc/deprecated/include -I/home/dungnt98/esp/esp-idf/components/esp_eth/include -I/home/dungnt98/esp/esp-idf/components/esp_gdbstub/include -I/home/dungnt98/esp/esp-idf/components/esp_gdbstub/xtensa -I/home/dungnt98/esp/esp-idf/components/esp_gdbstub/esp32 -I/home/dungnt98/esp/esp-idf/components/esp_hid/include -I/home/dungnt98/esp/esp-idf/components/tcp_transport/include -I/home/dungnt98/esp/esp-idf/components/esp_http_client/include -I/home/dungnt98/esp/esp-idf/components/esp_http_server/include -I/home/dungnt98/esp/esp-idf/components/esp_https_ota/include -I/home/dungnt98/esp/esp-idf/components/esp_lcd/include -I/home/dungnt98/esp/esp-idf/components/esp_lcd/interface -I/home/dungnt98/esp/esp-idf/components/protobuf-c/protobuf-c -I/home/dungnt98/esp/esp-idf/components/protocomm/include/common -I/home/dungnt98/esp/esp-idf/components/protocomm/include/security -I/home/dungnt98/esp/esp-idf/components/protocomm/include/transports -I/home/dungnt98/esp/esp-idf/components/esp_local_ctrl/include -I/home/dungnt98/esp/esp-idf/components/esp_psram/include -I/home/dungnt98/esp/esp-idf/components/espcoredump/include -I/home/dungnt98/esp/esp-idf/components/espcoredump/include/port/xtensa -I/home/dungnt98/esp/esp-idf/components/wear_levelling/include -I/home/dungnt98/esp/esp-idf/components/sdmmc/include -I/home/dungnt98/esp/esp-idf/components/fatfs/diskio -I/home/dungnt98/esp/esp-idf/components/fatfs/vfs -I/home/dungnt98/esp/esp-idf/components/fatfs/src -I/home/dungnt98/esp/esp-idf/components/idf_test/include -I/home/dungnt98/esp/esp-idf/components/idf_test/include/esp32 -I/home/dungnt98/esp/esp-idf/components/ieee802154/include -I/home/dungnt98/esp/esp-idf/components/json/cJSON -I/home/dungnt98/esp/esp-idf/components/mqtt/esp-mqtt/include -I/home/dungnt98/esp/esp-idf/components/perfmon/include -I/home/dungnt98/esp/esp-idf/components/spiffs/include -I/home/dungnt98/esp/esp-idf/components/ulp/ulp_common/include -I/home/dungnt98/esp/esp-idf/components/ulp/ulp_common/include/esp32 -I/home/dungnt98/esp/esp-idf/components/wifi_provisioning/include -mlongcalls -Wno-frame-address    -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=/home/dungnt98/esp32-conveyor=. -fmacro-prefix-map=/home/dungnt98/esp/esp-idf=/IDF -fstrict-volatile-bitfields -Wno-error=unused-but-set-variable -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -D_GNU_SOURCE -DIDF_VER=\"v5.0\" -DESP_PLATFORM -D_POSIX_READER_WRITER_LOCKS -Wno-format -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/encoder.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/encoder.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/encoder.c.obj   -c ../main/encoder.c
../main/encoder.c: In function 'encoder_init':
../main/encoder.c:9:5: error: implicit declaration of function 'memest'; did you mean 'memset'? [-Werror=implicit-function-declaration]
    9 |     memest(&g_encoder, 0, sizeof(g_encoder));
      |     ^~~~~~
      |     memset
../main/encoder.c: In function 'encoder_read_pulse_count':
../main/encoder.c:24:97: warning: comparison between pointer and integer
   24 |         if (io_current_value.input[ENCODER_A_PIN] == 0 && io_current_value.input[ENCODER_B_PIN] == 1)
      |                                                                                                 ^~
../main/encoder.c:26:47: error: assignment to expression with array type
   26 |             io_old_value.input[ENCODER_A_PIN] = io_current_value.input[ENCODER_A_PIN];
      |                                               ^
cc1: some warnings being treated as errors
[9/15] Linking C static library esp-idf/esp_local_ctrl/libesp_local_ctrl.a
[10/15] Linking C static library esp-idf/wifi_provisioning/libwifi_provisioning.a
ninja: build stopped: subcommand failed.
